# CourseStructGen

./: LICENSE  README.md  default_structure.json  pyproject.toml  requirements.txt  settings.json  setup.py
coursegen/: __init__.py  __main__.py  cli.py  generator.py
