[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coursegen"
version = "1.0.0"
description = "CLI tool for generating Udemy course project structures"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "colorama",
    "tqdm"
]

[project.scripts]
coursegen = "coursegen.cli:cli"
